# newt

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  FEATURE_DUMP.md  LICENSE  MISSING.md  Makefile  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/: package-matrix.yml
.github/workflows/: build.yml  package-linux.yml  package.yml
.husky/: pre-commit
libs/newt-agent/: Cargo.toml  build.rs
libs/newt-agent/src/: main.rs
libs/newt-agent/tests/: discovery.rs  serve_vfs.rs  shell_cli.rs
libs/newt-archive/: Cargo.toml
libs/newt-archive/src/: compress.rs  crypto.rs  lib.rs  tar.rs  zip.rs
libs/newt-archive/src/tar/: tests.rs
libs/newt-archive/src/zip/: tests.rs
libs/newt-common/: Cargo.toml  build.rs
libs/newt-common/src/: agent_resolver.rs  agent_resolver_tests.rs  api.rs  archive_pack.rs  askpass.rs  communicator.rs  connect.rs  conpty.rs  discovery.rs  file_reader.rs  filesystem.rs  filesystem_tests.rs  hot_paths.rs  lib.rs  locale.rs  operation.rs  operation_tests.rs  proc.rs  rpc.rs  rpc_tests.rs  shell.rs  shell_control.rs  sys.rs  terminal.rs  vfs.rs  vfs_archive.rs  vfs_s3.rs  vfs_tests.rs
libs/newt-common/src/api/: mod.rs  vfs.rs
libs/newt-common/src/enrich/: du.rs  enrich_tests.rs  git.rs  mod.rs
libs/newt-common/src/test_support/: mock_vfs.rs  mod.rs
libs/newt-common/src/vfs/: agent.rs  archive.rs  background_job.rs  disc.rs  disc_tests.rs  k8s.rs  local.rs  mod.rs  path.rs  path_style.rs  progress.rs  properties.rs  remote.rs  s3.rs  search.rs  sftp.rs  volume.rs
libs/newt-common/src/vfs/archive/: mod.rs  tar.rs  tar_tests.rs  zip.rs  zip_tests.rs
libs/newt-common/src/vfs/archive/fixtures/: regenerate.py  simple.tar  simple.tar.zst
libs/newt-disc/: Cargo.toml
libs/newt-disc/fixtures/: regenerate.sh
libs/newt-disc/src/: iso9660.rs  lib.rs  rockridge.rs  udf.rs
libs/newt-disc/tests/: images.rs
libs/pty-process/: .cargo_vcs_info.json  Cargo.toml  README.md
libs/pty-process/src/: command.rs  error.rs  lib.rs  pty.rs  sys.rs  types.rs
packaging/: newt.desktop
packaging/appimage/: AppRun  build-appimage.sh
packaging/arch/: build-pkg.sh
packaging/debian/: build-deb.sh
packaging/macos/: import-signing-cert.sh
packaging/publish/: build-manifest.py
packaging/rpm/: newt.spec
pty-process/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml
pty-process/src/: error.rs  lib.rs  sys.rs  types.rs
scripts/: bootstrap.sh
src/: App.tsx  ErrorBoundary.module.scss  ErrorBoundary.tsx  main.tsx  styles.css  styles.scss  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  common.rs  connections.rs  discovery.rs  file_server.rs  filesystem.rs  keychain.rs  main.rs  pane.rs  path_resolver.rs  runtime_state.rs  shell_control.rs  user_commands.rs
src-tauri/src/cmd/: dialog.rs  dnd.rs  mod.rs  operations.rs  pane.rs  preferences.rs  runtime_state.rs  terminal.rs  vfs.rs  window.rs
src-tauri/src/discovery/: wsl.rs
src-tauri/src/editor/: mod.rs
src-tauri/src/main_window/: drives.rs  elevate.rs  menu.rs  mod.rs  pane.rs  session.rs  shell_menu.rs  terminal.rs  win_proc.rs  wsl_launch.rs
src-tauri/src/preferences/: commands.rs  mod.rs  schema.rs  tests.rs
src-tauri/src/viewer/: mod.rs
src/assets/: mapping.json
src/editor/: Editor.module.scss  Editor.tsx
src/lib/: bindings.ts  commands.test.ts  commands.ts  datetime.test.ts  datetime.ts  invoke.ts  ipc.test.ts  ipc.ts  ipcCommands.ts  keybindings.ts  preferences.ts  runtimeState.ts  types.ts  useSuppressInitialPointer.ts  viewPortList.tsx
src/main_window/: Columns.module.scss  CommandBar.module.scss  CommandBar.tsx  CommandPalette.tsx  ConnectionLog.module.scss  ConnectionLog.tsx  ContextMenu.tsx  MainWindow.css  MainWindow.scss  MainWindow.tsx  Menu.module.scss  OperationProgressModal.module.scss  OperationsPanel.module.scss  OperationsPanel.test.ts  OperationsPanel.tsx  Pane.module.scss  Pane.tsx  Terminal.module.scss  Terminal.tsx  TerminalPanel.module.scss  TerminalPanel.tsx  columns.test.ts  columns.tsx  types.ts  utils.test.ts  utils.ts
src/main_window/modals/: About.module.scss  About.tsx  CommandPalette.module.scss  CommandPalette.tsx  Confirm.tsx  ConfirmDelete.tsx  ConfirmUnmapDrive.tsx  ConnectRemote.module.scss  ConnectRemote.tsx  ConnectionLogDialog.module.scss  ConnectionLogDialog.tsx  CopyMove.module.scss  CopyMove.tsx  CreateArchive.module.scss  CreateArchive.tsx  CreateDirectory.tsx  CreateFile.tsx  Debug.tsx  Dialog.module.scss  DialogActions.module.scss  DialogActions.tsx  HistoryNavigator.module.scss  HistoryNavigator.tsx  HotPaths.module.scss  HotPaths.tsx  ModalContent.css  ModalContent.scss  ModalContent.tsx  ModalRouter.tsx  MountK8s.tsx  MountS3.tsx  MountSftp.tsx  Navigate.tsx  Palette.tsx  Properties.module.scss  Properties.tsx  PropertySheetSection.tsx  QuickConnect.tsx  Rename.tsx  Search.tsx  (+6 more)
src/main_window/modals/primitives/: DialogActions.module.scss  DialogActions.tsx  DialogShell.module.scss  DialogShell.tsx  DialogTabs.module.scss  DialogTabs.tsx  Field.module.scss  Field.tsx  MountLog.module.scss  MountLog.tsx  ProfileNameField.module.scss  ProfileNameField.tsx  index.ts  useAsyncAction.ts
src/main_window/modals/settings/: CommandsEditor.tsx  KeybindingsEditor.tsx  SettingControls.tsx  keybindingHelpers.tsx  schema.ts
src/styles/: _base.scss  _dialog-mixins.scss  _dnd.scss  _file-icons.scss  _reset.scss  _theme-dark.scss  _theme-light.scss  _tokens.scss  globals.scss
src/viewer/: GoToDialog.tsx  HexViewer.tsx  ImageViewer.tsx  MediaViewer.tsx  ModeToggle.tsx  PdfViewer.tsx  SearchBar.tsx  TextViewer.tsx  Viewer.css  Viewer.module.scss  Viewer.scss  Viewer.tsx  helpers.test.ts  helpers.ts
xtask/: Cargo.toml
xtask/src/: main.rs
