[workspace]
resolver = "2"
members = [
    "src-tauri/",
    "libs/pty-process/",
    "libs/newt-agent/",
    "libs/newt-archive/",
    "libs/newt-common/",
    "libs/newt-disc/",
    "xtask/",
]
# Plain `cargo build` builds only the app shell + common lib. The agent is
# built per-target (incl. both Windows arches) and laid out into `agents/`
# via `cargo xtask agents`; pty-process is Unix-only; xtask is a build tool.
# None of those belong in a default host build.
default-members = [
    "src-tauri/",
    "libs/newt-common/",
]
