[package]
name = "newt"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
anyhow = "1"
serde_json = "1.0"
opener = "0.6"
once_cell = "1"
notify = "6"
uuid = { version = "1.3", features = ["serde", "v4"] }
url = "2"
regex = "1"
arboard = "3"
parking_lot = "0.12"
treediff = { version = "4", features = ["with-serde-json"] }
newt-common = { path = "../libs/newt-common" }
pty-process = { path = "../libs/pty-process" }
tokio = { version = "1", features = ["full"] }
libc = "*"
shell-quote = "0.3.0"
tokio-util = "0.7.8"
async-trait = "0.1.68"
bytes = "1.4.0"
bincode = "1.3.3"
log = "0.4"
pretty_env_logger = "0.5"
tokio-duplex = "1.0.1"
clap = { version = "4", features = ["derive"] }
async-compression = { version = "0.4.4", features = ["zstd", "tokio"] }
blake3 = "1"
nix = { version = "0.26.2", features = ["fs"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "*"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "*"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
