[package]
name = "newt"
version = "0.0.0"
description = "Dual-pane file manager"
license = "MIT"
repository = "https://github.com/tibordp/newt"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
anyhow = "1"
serde_json = "1"
opener = "0.6"
once_cell = "1"
notify = "8"
uuid = { version = "1", features = ["serde", "v4"] }
url = "2"
percent-encoding = "2"
regex = "1"
arboard = "3"
parking_lot = "0.12"
treediff = { version = "5", features = ["with-serde-json"] }
newt-common = { path = "../libs/newt-common" }
pty-process = { path = "../libs/pty-process" }
tokio = { version = "1", features = ["full"] }
libc = "*"
shell-quote = "0.7"
tokio-stream = "0.1"
tokio-util = "0.7"
async-trait = "0.1"
bytes = "1"
bincode = "1.3.3"
toml = "0.8"
toml_edit = "0.22"
schemars = "0.8"
log = "0.4"
pretty_env_logger = "0.5"
tokio-duplex = "1.0.1"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
async-compression = { version = "0.4.4", features = ["zstd", "tokio"] }
blake3 = "1"
nix = { version = "0.31", features = ["fs", "hostname"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
arc-swap = "1.8.2"
minijinja = "2"
flate2 = "1.1.9"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "*"
gio = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "*"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
