[package]
name = "newt"
version = "0.1.0"
description = "Dual-pane file manager"
license = "GPL-3.0-or-later"
repository = "https://github.com/tibordp/newt"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["specta"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
serde_json = "1"
opener = "0.6"
drag = "2.1"
once_cell = "1"
notify = "8"
uuid = { version = "1", features = ["serde", "v4"] }
url = "2"
percent-encoding = "2"
regex = "1"
arboard = "3"
parking_lot = "0.12"
treediff = { version = "5", features = ["with-serde-json"] }
newt-common = { path = "../libs/newt-common" }
tokio = { version = "1", features = ["full"] }
libc = "*"
shell-quote = "0.7"
tokio-stream = "0.1"
tokio-util = "0.7"
async-trait = "0.1"
bytes = "1"
bincode = "1.3.3"
toml = "0.8"
toml_edit = "0.22"
schemars = "0.8"
log = "0.4"
pretty_env_logger = "0.5"
tokio-duplex = "1.0.1"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
async-compression = { version = "0.4.4", features = ["zstd", "tokio"] }
blake3 = "1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
arc-swap = "1.8.2"
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
minijinja = "2"
tempfile = "3.27.0"
specta = { version = "=2.0.0-rc.22", features = ["serde_json"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["fs", "hostname"] }
pty-process = { path = "../libs/pty-process" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
# Versions pinned to match wry's WebView2 bindings so the controller handed
# to `WebviewWindow::with_webview` casts to our interface cleanly.
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "*"
gio = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "*"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# Compile the platform-gated specta-visible items (e.g. the WSL picker
# payload) even off their target OS, so `cargo xtask gen-bindings` emits a
# host-independent `bindings.ts`. Never enabled for shipping builds.
specta-bindings = []
