[package]
name = "newt-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newt-common = { path = "../newt-common" }
pretty_env_logger = "0.5.0"
tokio = { version = "1", features = ["full"] }
tokio-duplex = "1.0.1"
