[package]
name = "newt-agent"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Agent binary for Newt remote and elevated sessions"

[dependencies]
async-compression = { version = "0.4.4", features = ["zstd", "tokio"] }
clap = { version = "4.3.3", features = ["derive"] }
newt-common = { path = "../newt-common" }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1", features = ["full"] }
tokio-duplex = "1.0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"

[dev-dependencies]
tempfile = "3.27.0"
async-trait = "0.1"
