[package]
name = "newt-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
notify = "8"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
libc = "*"
tokio-util = { version = "0.7", features = ["codec"] }
pty-process = { path = "../pty-process" }
async-trait = "0.1"
log = "0.4"
bytes = { version = "1", features = ["std", "serde"] }
byteorder = "1.5"
futures = "0.3"
tokio-stream = "0.1"
bincode = "1.3.3"
nix = { version = "0.31", features = ["fs", "user"] }
filetime = "0.2"
expanduser = "*"
inventory = "0.3"
zip = "2"
