[package]
name = "newt-common"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Shared types, RPC protocol, VFS traits, and operation logic for Newt"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
notify = "8"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
libc = "*"
tokio-util = { version = "0.7", features = ["codec"] }
pty-process = { path = "../pty-process" }
async-trait = "0.1"
log = "0.4"
bytes = { version = "1", features = ["std", "serde"] }
byteorder = "1.5"
futures = "0.3"
tokio-stream = "0.1"
bincode = "1.3.3"
nix = { version = "0.31", features = ["fs", "user"] }
filetime = "0.2"
expanduser = "*"
inventory = "0.3"
zip = { version = "2", features = ["time"] }
time = "0.3"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
mimetype-detector = "0"
mime_guess = "2"
dirs = "6"
url = "2"
openssh-sftp-client = "0.15"
openssh-sftp-protocol-error = "0.1.1"
iluvatar = { version = "0.1.1", features = ["tokio"] }

[target.'cfg(target_os = "linux")'.dependencies]
quick-xml = "0.37"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
