[package]
name = "newt-common"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
description = "Shared types, RPC protocol, VFS traits, and operation logic for Newt"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
notify = "8"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
log = "0.4"
bytes = { version = "1", features = ["std", "serde"] }
byteorder = "1.5"
futures = "0.3"
tokio-stream = "0.1"
bincode = "1.3.3"
filetime = "0.2"
inventory = "0.3"
zip = { version = "2", features = ["time"] }
time = "0.3"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-sts = "1"
mimetype-detector = "0"
mime_guess = "2"
regex = "1"
memchr = "2"
globset = "0.4"
dirs = "6"
url = "2"
openssh-sftp-client = "0.15"
openssh-sftp-protocol-error = "0.1.1"
iluvatar = { version = "0.3", features = ["tokio"] }
newt-archive = { path = "../newt-archive" }
blake3 = "1"
serde_json = "1"
tokio-duplex = "1.0.1"
flate2 = "1.1.9"
tempfile = "3.27.0"
trash = "5"
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }

[dev-dependencies]
serde_json = "1"

[target.'cfg(unix)'.dependencies]
expanduser = "*"
libc = "*"
nix = { version = "0.31", features = ["fs", "user"] }
pty-process = { path = "../pty-process" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
] }

[target.'cfg(target_os = "linux")'.dependencies]
quick-xml = "0.37"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
